forcing user to enter a message if they want to send

--- a/webportal/public/css/custom.css
+++ b/webportal/public/css/custom.css
@@ -189,6 +189,11 @@ button:hover {
   background-color: rgba(230, 242, 255,.85);
 }
 
+button:disabled {
+  background-color: rgba(230, 242, 255,.5);
+  cursor: default;
+}
+
 .lefted {
   float: left;
 }
