--- a/webportal/public/css/custom.css
+++ b/webportal/public/css/custom.css
@@ -1,5 +1,5 @@
 .rgba-primary-0 {
-  background-color: rgba(230, 242, 255,1);
+  background-color: rgba(192,249,254,1);
 }
 
 .rgba-primary-1 {
@@ -10,13 +10,26 @@
   background-color: rgba(0,0,0,1);
 }
 
-.rgba-primary-3 {
-  background-color: rgba(255,255,204,1);
+button {
+  background-color: rgba(192,249,254,1);
+  color: #000;
+  border-radius: 4px;
+  font-size: 0.9em;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border-color: #000;
 }
 
-.rgba-primary-4 {
-  background-color: rgba(255,125,69,1);
+button:hover {
+  background-color: rgba(192,249,254,0.85);
 }
+
+button:disabled {
+  background-color: rgba(192,249,254,.5);
+  cursor: default;
+}
+
 
 body {
   font-family: Karla, sans-serif;
@@ -174,26 +187,6 @@ h1 {
   padding-right: 3px;
 }
 
-button {
-  background-color: rgba(230, 242, 255,1);
-  color: #000;
-  border-radius: 4px;
-  font-size: 0.9em;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  border-color: #000;
-}
-
-button:hover {
-  background-color: rgba(230, 242, 255,.85);
-}
-
-button:disabled {
-  background-color: rgba(230, 242, 255,.5);
-  cursor: default;
-}
-
 .lefted {
   float: left;
 }
@@ -220,83 +213,45 @@ img .message-image {
   max-width: 100%;
 }
 
-/* .bubble styling from http://cssdeck.com/labs/6mifhkdc */
+.author-link {
+  opacity: 0.5;
+}
+
+.profile-picture {
+  background-color: white;
+  padding: 2px;
+  height: 7px;
+  width: 7px;
+  border-radius: 50px;
+}
+
+.begin-conversation {
+  opacity: 0.5;
+}
+
 .bubble {
   background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
-  background-image: -o-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
-  background-image: -moz-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
-  background-image: -webkit-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
-  background-image: -ms-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
-  background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.25, rgb(210,244,254)),color-stop(1, rgb(149,194,253)));
-  border: solid 1px rgba(0, 0, 0, 0.5);
-  /* vendor rules */
-  border-radius: 20px;
-  /* vendor rules */
-  box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.4), 0 1px 3px rgba(0, 0, 0, 0.2);
-  /* vendor rules */
+  background-color: #FFDB4C;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.2), 0 1px 3px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   clear: both;
   float: left;
-  margin-bottom: 20px;
-  padding: 8px 30px;
+  margin-bottom: 15px;
+  padding: 5px 10px;
   position: relative;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.9);
   width: auto;
   max-width: 100%;
   word-wrap: break-word;
 }
 
-.bubble:before, .bubble:after {
-  border-radius: 20px / 10px;
-  content: '';
-  display: block;
-  position: absolute;
-}
-
-.bubble:before {
-  border: 10px solid transparent;
-  border-bottom-color: rgba(0, 0, 0, 0.5);
-  bottom: 0;
-  left: -7px;
-  z-index: -2;
-}
-
-.bubble:after {
-  border: 8px solid transparent;
-  border-bottom-color: #d2f4fe;
-  bottom: 1px;
-  left: -5px;
-}
-
 .bubble--alt {
-  background-image: linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -o-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -moz-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -webkit-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -ms-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-    color-stop(0.25, rgb(172,228,75)),
-    color-stop(1, rgb(122,205,71))
-    );
+  background-color: #55EFCB;
   float: right;
 }
 
-.bubble--alt:before {
-  border-bottom-color: rgba(0, 0, 0, 0.5);
-  border-radius: 20px / 10px;
-  left: auto;
-  right: -7px;
-}
-
-.bubble--alt:after {
-  border-bottom-color: #ace44b;
-  border-radius: 20px / 10px;
-  left: auto;
-  right: -5px;
-}
 
 .se-pre-con {
   position: fixed;
