--- a/webportal/templates/index.phtml
+++ b/webportal/templates/index.phtml
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div id="bottom-panel" class="rgba-primary-2">
-      <h2><span id="welcome-message" class="logo lefted">Welcome</span><input id="messagebar-input" placeholder="Messages" class="searchbarinput" onkeydown = "filter('messagebar-input','messages-div','message-link')" onkeypress = "filter('messagebar-input','messages-div','message-link')" onkeyup ="filter('messagebar-input','messages-div','message-link')" type="text"></input></h2>
+      <h2><span id="welcome-message" class="logo lefted"></span><input id="messagebar-input" placeholder="Messages" class="searchbarinput" onkeydown = "filter('messagebar-input','messages-div','message-link')" onkeypress = "filter('messagebar-input','messages-div','message-link')" onkeyup ="filter('messagebar-input','messages-div','message-link')" type="text"></input></h2>
       <div id="message-panel" class="rgba-primary-0">
         <div class="more-padded" id="message-context">
           <div class="more-padded-below"><i class="begin-conversation">- Beginning of Conversation -</i></div>
