--- a/webportal/public/css/custom.css
+++ b/webportal/public/css/custom.css
@@ -1,5 +1,9 @@
 .rgba-primary-0 {
-  background-color: rgba(192,249,254,1);
+  background-color: rgba(244, 194, 13,1);
+}
+
+.logo {
+  color: rgba(244, 194, 13,1);
 }
 
 .rgba-primary-1 {
@@ -11,7 +15,7 @@
 }
 
 button {
-  background-color: rgba(192,249,254,1);
+  background-color: rgba(60, 186, 84,1);
   color: #000;
   border-radius: 4px;
   font-size: 0.9em;
@@ -22,11 +26,11 @@ button {
 }
 
 button:hover {
-  background-color: rgba(192,249,254,0.85);
+  background-color: rgba(60, 186, 84,0.85);
 }
 
 button:disabled {
-  background-color: rgba(192,249,254,.5);
+  background-color: rgba(60, 186, 84,.5);
   cursor: default;
 }
 
@@ -34,7 +38,7 @@ button:disabled {
 body {
   font-family: Karla, sans-serif;
   text-align: center;
-  background-color: #000;
+  background-color: rgba(0,0,0,1);
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -182,7 +186,6 @@ h1 {
 }
 
 .logo {
-  color: white;
   padding-left: 5px;
   padding-right: 3px;
 }
@@ -231,7 +234,7 @@ img .message-image {
 
 .bubble {
   background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
-  background-color: #FFDB4C;
+  background-color: rgba(219, 50, 54,1);
   border: solid 1px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.2), 0 1px 3px rgba(0, 0, 0, 0.1);
@@ -241,14 +244,14 @@ img .message-image {
   margin-bottom: 15px;
   padding: 5px 10px;
   position: relative;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0px 1px rgba(255, 255, 255, 0.3);
   width: auto;
   max-width: 100%;
   word-wrap: break-word;
 }
 
 .bubble--alt {
-  background-color: #55EFCB;
+  background-color: rgba(72, 133, 237,1);
   float: right;
 }
 
@@ -331,7 +334,7 @@ img .message-image {
   transition: .2s;
 }
 
-.color-primary-1,#user-panel h2 {
+.color-primary-1, #user-panel h2 {
   color: #FFF;
 }
 
@@ -346,11 +349,6 @@ img .message-image {
 
 #canvasdiv,.no-js #loader {
   display: none;
-}
-
-progress::-moz-progress-bar,progress::-webkit-progress-value {
-  border-radius: 3px;
-  background: #000;
 }
 
 @media screen and max-height 450px {
