--- a/webportal/public/css/custom.css
+++ b/webportal/public/css/custom.css
@@ -161,6 +161,33 @@ h1 {
   color: red;
   cursor: pointer;
 }
+#create-conversation-link {
+  text-decoration: none;
+  color: #000;
+  font-size: 1.2em;
+}
+#create-conversation-link:hover {
+  color: red;
+  cursor: pointer;
+}
+#conversation-list a {
+  text-decoration: none;
+  color: #000;
+}
+#conversation-list a:hover {
+  color: red;
+  cursor: pointer;
+}
+.divided {
+  border-color: black;
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+}
 .logo {
   padding-left: 5px;
   padding-right: 3px;
@@ -300,6 +327,18 @@ img .message-image {
 #canvasdiv,
 .no-js #loader {
   display: none;
+}
+.loading {
+  width: 25px;
+  height: 20px;
+  -webkit-filter: drop-shadow(2px 2px 2px #000);
+  filter: drop-shadow(2px 2px 2px #000);
+}
+.loadingbig {
+  width: 50px;
+  height: 40px;
+  -webkit-filter: drop-shadow(2px 2px 2px #000);
+  filter: drop-shadow(2px 2px 2px #000);
 }
 @media screen and max-height 450px {
   .sidenav {
