--- a/webportal/public/css/custom.css
+++ b/webportal/public/css/custom.css
@@ -1,5 +1,5 @@
 .rgba-primary-0 {
-  background-color: rgba(244, 194, 13, 1);
+  background-color: rgba(38,198,218, 1);
 }
 .logo {
   color: rgba(244, 194, 13, 1);
@@ -11,7 +11,7 @@
   background-color: rgba(0, 0, 0, 1);
 }
 button {
-  background-color: rgba(60, 186, 84, 1);
+  background-color: rgba(0,149,168,.9);
   color: #000;
   border-radius: 4px;
   font-size: 0.9em;
@@ -21,10 +21,10 @@ button {
   border-color: #000;
 }
 button:hover {
-  background-color: rgba(60, 186, 84, 0.85);
+  background-color: rgba(0,149,168,1);
 }
 button:disabled {
-  background-color: rgba(60, 186, 84, .5);
+  background-color: rgba(79,91,98,.7);
   cursor: default;
 }
 body {
@@ -63,20 +63,20 @@ body {
 #conversation-panel {
   float: left;
   border: 1px solid black;
-  border-radius: 10px;
+  border-radius: 4px;
   height: 100%;
   width: 18%;
   margin-left: 5px;
 }
 #conversation-list {
-  height: 600px;
+  height: 468px;
   overflow-y: scroll;
 }
 #message-panel {
   height: 510px;
   width: 95%;
   border: 1px solid black;
-  border-radius: 10px;
+  border-radius: 4px;
   overflow-y: scroll;
   padding-bottom: 30px;
 }
@@ -85,7 +85,7 @@ body {
 }
 #message-input {
   margin-top: 10px;
-  border-radius: 5px;
+  border-radius: 4px;
   height: 80px;
   width: 50%;
 }
@@ -125,8 +125,13 @@ h1 {
   margin: 0;
   padding: 3px;
 }
-#messagebar-input {
+.searchbarinput{
   width: 80%;
+  -webkit-transition: width 0.5s ease-in-out;
+    transition: width 0.5s ease-in-out;
+}
+.searchbarinput:focus {
+  width: 90%;
 }
 #user-panel a {
   text-decoration: none;
@@ -150,7 +155,7 @@ h1 {
   left: 50%;
   margin: -150px 0 0 -300px;
   /* [-(height/2)px 0 0 -(width/2)px] */
-  border-radius: 10px;
+  border-radius: 4px;
 }
 .error-box {
   padding: 20px;
@@ -166,7 +171,7 @@ h1 {
   left: 50%;
   margin: -150px 0 0 -300px;
   /* [-(height/2)px 0 0 -(width/2)px] */
-  border-radius: 10px;
+  border-radius: 4px;
 }
 #footer a {
   text-decoration: none;
@@ -246,8 +251,8 @@ img .message-image {
 }
 .bubble {
   background-image: linear-gradient(bottom, rgb(210, 244, 254) 25%, rgb(149, 194, 253) 100%);
-  background-color: rgba(219, 50, 54, 1);
-  border: solid 1px rgba(0, 0, 0, 0.1);
+  background-color: rgba(204,255,144, 1);
+  border: solid 1px rgba(38,50,56,0.9);
   border-radius: 5px;
   box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.2), 0 1px 3px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
@@ -262,7 +267,7 @@ img .message-image {
   word-wrap: break-word;
 }
 .bubble--alt {
-  background-color: rgba(72, 133, 237, 1);
+  background-color: rgba(255,138,128, 1);
   float: right;
 }
 .se-pre-con {
@@ -365,5 +370,10 @@ img .message-image {
   }
   .sidenav a.blocked {
     font-size: 18px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  #conversation-panel {
+    width: 19%;
   }
 }
